infrastructure/envoy-gateway/overlays/local/gatewayclass-local.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-classic
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
