infrastructure/envoy-gateway/overlays/local/gateway-local.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-local
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway-classic
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
